-
Bug
-
Resolution: Done
-
P2: Important
-
6.0
-
None
-
-
360f1547f7 (qt/qtbase/dev) 360f1547f7 (qt/tqtc-qtbase/dev) cb9eb8e8fd (qt/qtbase/6.4) cb9eb8e8fd (qt/tqtc-qtbase/6.4)
tst_QFont::defaultFamily() fails on Ubuntu20.
It looks for the font "Z003" in the font database. However, the font database only contains the fonts "Z003 [urw]" and "Z003 [UKWN]".
- is duplicated by
-
QTBUG-84248 tst_QFont::defaultFamily fails
-
- Open
-
- is required for
-
QTBUG-88354 Ubuntu 20.04 QEMU targets have InsignificantTests flags
-
- Open
-
- relates to
-
QTBUG-84248 tst_QFont::defaultFamily fails
-
- Open
-
| For Gerrit Dashboard: QTBUG-86967 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 419299,5 | Fix QFontDatabase::hasFamily() for ambiguous families | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 426780,2 | Fix QFontDatabase::hasFamily() for ambiguous families | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |